--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
       <body style="background-color: #f5f5dc;">
          <div class="background">
-     		<form action="secondpage.html">
+     		<form>
      	 <div class="logo"><img src="logo.png" width="120" alt="Tally Hotel Logo"></div>
      		  
  	<h1>Tally Hotel Feedback Form</h1>
