--- a/second page.html
+++ b/second page.html
@@ -13,6 +13,7 @@
 <p><b>Please Note:</b> First Name, Last Name, Password, Email are required.</p>
                   
                       <!-- For form -->
+                          <form>
 				<label for="first name">First Name</label><br>
 					<input type="text"  placeholder="Enter first name" required> 	<br><br>
 					
