--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  <h3>Any other message for us ?</h3>
  <textarea name="" id="" clos="60" rows="7" placeholder="Enter your message" ></textarea> <br><br>
  
-  <a href="secondpage.html">
+  <a href="second_page.html">
     <button>Send</button>  
 </a> 
         </div>
