--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -56,7 +55,7 @@
  <h3>Any other message for us ?</h3>
  <textarea name="" id="" clos="60" rows="7" placeholder="Enter your message" ></textarea> <br><br>
  
-  <a href="second_page.html">
+  <a href="secondpage.html">
     <button>Send</button>  
 </a> 
         </div>
