--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <body style="background-color: #f5f5dc;">
          <div class="background">
      		<form>
-     	 <div class="logo"><img src="logo.png" width="120" alt="Tally Hotel Logo"></div>
+     	 <div class="logo"><img src="20220614_162602.png" width="120" alt="Tally Hotel Logo"></div>
      		  
  	<h1>Tally Hotel Feedback Form</h1>
      <p>Welcome to Tally Hotel <br> Please, kindly answer the following questions.</p>
