--- a/secondpage.html
+++ b/secondpage.html
@@ -5,7 +5,7 @@
   </head>
    <body style="background-color:  #f5f5dc;">
        <div class="background">
-           	 <div class="logo"><img src="logo.png" width="120" alt="Tally Hotel Logo"></div>
+           	 <div class="logo"><img src="20220614_162602.png" width="120" alt="Tally Hotel Logo"></div>
      		
     	<h1>Sign Up To Tally Hotel</h1>
     	<h3>Signing up to our page helps our customers get more insight about our hotel, and helps us keep personal data and other information about our customers when they visit our hotel, so we would like for to have can account with us.</h3>
