--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
       <body style="background-color: #f5f5dc;">
          <div class="background">
-     		<form>
-     	 <div class="logo"><img src="20220614_162602.png" width="120" alt="Tally Hotel Logo"></div>
+     		<form action="secondpage.html">
+     	 <div class="logo"><img src="20220614_162602.png" height="350" alt="Tally Hotel Logo"></div>
      		  
  	<h1>Tally Hotel Feedback Form</h1>
      <p>Welcome to Tally Hotel <br> Please, kindly answer the following questions.</p>
@@ -55,9 +55,7 @@
  <h3>Any other message for us ?</h3>
  <textarea name="" id="" clos="60" rows="7" placeholder="Enter your message" ></textarea> <br><br>
  
-  <a href="secondpage.html">
-    <button>Send</button>  
-</a> 
+  <button>Send</button>  
         </div>
     	</form>
     </body>
