--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <body style="background-color: #f5f5dc;">
          <div class="background">
   	 <form action="submitpage.html"> 	   
-  	     	 <div class="logo"><img src=".png" width="350" alt="Tally Hotel Logo"></div>
+  	     	 <div class="logo"><img src="20220614_162602.png" height="350" alt="Tally Hotel Logo"></div>
      		  
  	<h1>Welcome to Tally Hotel</h1>
      <h4>Please, kindly fill the form to secure a slot.</h4>
