--- a/submitpage.html
+++ b/submitpage.html
@@ -7,7 +7,7 @@
 <div class="background">
     	 <div class="logo"><img src="20220614_162602.png" height="350" alt="Tally Hotel Logo"></div> 
      		
-    <h1>You have successfully secured a slot. Thank You!</h1>
+    <p><b>You have successfully secured a slot. Thank You!</b></p>
     </div>
 </body>
 </html>
